--- a/Jata/pom.xml
+++ b/Jata/pom.xml
@@ -22,7 +22,16 @@
 		    <artifactId>sqlite-jdbc</artifactId>
 		    <version>3.21.0.1</version>
 		</dependency>				
-		
+		<dependency>
+		    <groupId>org.mongodb</groupId>
+		    <artifactId>mongo-java-driver</artifactId>
+		    <version>3.8.0-beta1</version>
+		</dependency>		
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.4</version>
+		</dependency>		
 
 	</dependencies>
  
